Move some parameters to config file

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -22,3 +22,10 @@ M_gas = 1
 N_gas = 2000000
 z0_gas = 0.035 ; Scale height in units of z0, 1 means z0_gas = z0
 Z = 1.0 ; Initial metallicity for the gas (in solar units)
+
+# You can leave the values below as they are, they are verified to work
+[global]
+N_rho = 256 ; Number of points used to discretize the rho axis
+rho_max = 300 ; Maximum value of rho in the discratization, in units of a_halo
+N_z = 256 ; Same as above, but for z axis
+z_max = 3000 ; Same as above, but for z axis
