--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -27,5 +27,5 @@ Z = 1.0 ; Initial metallicity for the gas (in solar units)
 [global]
 N_rho = 256 ; Number of points used to discretize the rho axis
 rho_max = 300 ; Maximum value of rho in the discratization, in units of a_halo
-N_z = 256 ; Same as above, but for z axis
+Nz = 256 ; Same as above, but for z axis
 z_max = 3000 ; Same as above, but for z axis
