--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -2,7 +2,11 @@
 M_halo = 100
 N_halo = 2000000
 a_halo = 47
-halo_core = False ; Does the halo follow a core density profile?
+# Does the halo follow a core density profile? This means that
+# gamma=0 in the Dehnen density profile assigned to the halo. By
+# default, gamma=1, which is equivalent to a Hernquist density
+# profile.
+halo_core = False 
 
 [disk]
 M_disk = 5
