move header to config file

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -33,3 +33,22 @@ N_rho = 256 ; Number of points used to discretize the rho axis
 rho_max = 300 ; Maximum value of rho in the discratization, in units of a_halo
 Nz = 256 ; Same as above, but for z axis
 z_max = 3000 ; Same as above, but for z axis
+double_precision_hdf5 = 1 ; Only relevant for hdf5 initial conditions
+
+[header]
+# Mass array. Either gives the mass of each particle type or 0.0,
+# if defined individually for each particle
+mass_array = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
+time = 0.0 ; Time
+redshift = 0.0
+flag_sfr = 0 ; Star formation rate flag
+flag_feedback = 0 ; Feedback flag
+flag_cooling = 0 ; Cooling flag
+num_files = 1 ; Total number of files
+boxsize = 0.0
+omega0 = 0.0
+omega_lambda = 0.0
+hubble_param = 1.0
+flag_age = 0
+flag_metals = 0 ; 
+entropy = 0 ; Is entropy used instead of internal energy?
