--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -35,6 +35,7 @@ Nz = 256 ; Same as above, but for z axis
 z_max = 3000 ; Same as above, but for z axis
 double_precision_hdf5 = 1 ; Only relevant for hdf5 initial conditions
 
+# I have never changed these values, you can usually ignore them
 [header]
 # Mass array. Either gives the mass of each particle type or 0.0,
 # if defined individually for each particle
