add halo/bulge truncation

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -2,11 +2,14 @@
 M_halo = 100
 N_halo = 2000000
 a_halo = 47
-# Does the halo follow a core density profile? This means that
-# gamma=0 in the Dehnen density profile assigned to the halo. By
-# default, gamma=1, which is equivalent to a Hernquist density
-# profile.
+; Does the halo follow a core density profile? This means that
+; gamma=0 in the Dehnen density profile assigned to the halo. By
+; default, gamma=1, which is equivalent to a Hernquist density
+; profile.
 halo_core = False 
+; Truncation radius, note that this also truncates the mass to ensure
+; that the density profile is conserved
+halo_cut_r = 900 ; Truncation radius
 
 [disk]
 M_disk = 5
@@ -20,6 +23,8 @@ M_bulge = 1
 N_bulge = 40000
 a_bulge = 1.5
 bulge_core = False ; Does the bulge follow a core density profile?
+; Truncation radius, see note above for the halo_cut_r
+bulge_cut_r = 30
 
 [gas]
 M_gas = 1
@@ -27,7 +32,7 @@ N_gas = 2000000
 z0_gas = 0.035 ; Scale height in units of z0, 1 means z0_gas = z0
 Z = 1.0 ; Initial metallicity for the gas (in solar units)
 
-# You can leave the values below as they are, they are verified to work
+; You can leave the values below as they are, they are verified to work
 [global]
 N_rho = 256 ; Number of points used to discretize the rho axis
 rho_max = 300 ; Maximum value of rho in the discratization, in units of a_halo
@@ -35,10 +40,10 @@ Nz = 256 ; Same as above, but for z axis
 z_max = 3000 ; Same as above, but for z axis
 double_precision_hdf5 = 1 ; Only relevant for hdf5 initial conditions
 
-# I have never changed these values, you can usually ignore them
+; I have never changed these values, you can usually ignore them
 [header]
-# Mass array. Either gives the mass of each particle type or 0.0,
-# if defined individually for each particle
+; Mass array. Either gives the mass of each particle type or 0.0,
+; if defined individually for each particle
 mass_array = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
 time = 0.0 ; Time
 redshift = 0.0
