add disk truncation

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -17,6 +17,9 @@ N_disk = 100000
 Rd = 3.5 ; Radial scale factor for the disk
 z0 = 0.7 ; Height scale factor for the disk
 factor = 0.8 ; Conversion factor from sigma_z to sigma_r
+; Radial cut, applies applies to gas. As with the halo, will truncate
+; the mass to ensure that the density profile is conserved.
+disk_cut_r = 30
 
 [bulge]
 M_bulge = 1
