--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -9,7 +9,7 @@ a_halo = 47
 halo_core = False 
 ; Truncation radius, note that this also truncates the mass to ensure
 ; that the density profile is conserved
-halo_cut_r = 900 ; Truncation radius
+halo_cut_r = 900
 
 [disk]
 M_disk = 5
