add gamma parameter to config file

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -2,14 +2,14 @@
 M_halo = 100
 N_halo = 2000000
 a_halo = 47
-; Does the halo follow a core density profile? This means that
-; gamma=0 in the Dehnen density profile assigned to the halo. By
-; default, gamma=1, which is equivalent to a Hernquist density
-; profile.
-halo_core = False 
 ; Truncation radius, note that this also truncates the mass to ensure
 ; that the density profile is conserved
 halo_cut_r = 900
+; Dehnen density profile free parameter. If gamma = 1, then the profile
+; is equal to a Hernquist profile, featuring a central cusp. If gamma = 0,
+; then the profile features a central core. See discussion in
+; http://adsabs.harvard.edu/abs/2017MNRAS.468.4107R
+gamma_halo = 1
 
 [disk]
 M_disk = 5
@@ -25,9 +25,10 @@ disk_cut_r = 30
 M_bulge = 1
 N_bulge = 40000
 a_bulge = 1.5
-bulge_core = False ; Does the bulge follow a core density profile?
 ; Truncation radius, see note above for the halo_cut_r
 bulge_cut_r = 30
+; Dehnen density profile parameter, see note above for gamma_bulge
+gamma_bulge = 1
 
 [gas]
 M_gas = 1
