fix floating point bug

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -1,6 +1,6 @@
 [halo]
 M_halo = 100
-N_halo = 2000000
+N_halo = 20000
 a_halo = 47
 ; Truncation radius, note that this also truncates the mass to ensure
 ; that the density profile is conserved
@@ -13,7 +13,7 @@ gamma_halo = 1
 
 [disk]
 M_disk = 5
-N_disk = 100000
+N_disk = 1000
 Rd = 3.5 ; Radial scale factor for the disk
 z0 = 0.7 ; Height scale factor for the disk
 factor = 0.8 ; Conversion factor from sigma_z to sigma_r
@@ -23,7 +23,7 @@ disk_cut_r = 30
 
 [bulge]
 M_bulge = 1
-N_bulge = 40000
+N_bulge = 400
 a_bulge = 1.5
 ; Truncation radius, see note above for the halo_cut_r
 bulge_cut_r = 30
@@ -32,7 +32,7 @@ gamma_bulge = 1
 
 [gas]
 M_gas = 1
-N_gas = 2000000
+N_gas = 20000
 z0_gas = 0.035 ; Scale height in units of z0, 1 means z0_gas = z0
 Z = 1.0 ; Initial metallicity for the gas (in solar units)
 
