--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -27,7 +27,7 @@ N_bulge = 4000
 a_bulge = 1.5
 ; Truncation radius, see note above for the halo_cut_r
 bulge_cut_r = 30
-; Dehnen density profile parameter, see note above for gamma_bulge
+; Dehnen density profile parameter, see note above for gamma_halo
 gamma_bulge = 1
 
 [gas]
