make bulge optional
there is probably a better way to do this, but for now
this is better than nothing

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -22,6 +22,7 @@ factor = 0.8 ; Conversion factor from sigma_z to sigma_r
 disk_cut_r = 30
 
 [bulge]
+include = True ; Change to False if you don't want a bulge
 M_bulge = 1
 N_bulge = 4000
 a_bulge = 1.5
