move parameter to include gas to params file

--- a/galstep/params_galaxy.ini
+++ b/galstep/params_galaxy.ini
@@ -32,6 +32,7 @@ bulge_cut_r = 30
 gamma_bulge = 1
 
 [gas]
+include = True ; Change to False if you don't want a gaseous disk
 M_gas = 1
 N_gas = 20000
 z0_gas = 0.035 ; Scale height in units of z0, 1 means z0_gas = z0
